# fcc_qp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  fcc_qp_test.py  setup.py
conehead/: __init__.py
fcc_qp/: __init__.py
src/: conehead_solver.cpp  conehead_solver.hpp  constraint_utils.cpp  constraint_utils.hpp  fcc_qp.cpp  fcc_qp.hpp  fcc_qp_solver.cpp  fcc_qp_solver.hpp  linalg.cpp  linalg.hpp  main.cpp  spqr_solver.cpp  spqr_solver.hpp
